--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,27 @@
-name: untitled4
-description: "تطبيق أنتِ أيضاً صحابية - مشروع المكتبة"
+name: sahabiya_app
+description: "A new Flutter project."
 publish_to: 'none'
+
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
+  get: ^4.6.6
   image_picker: ^1.0.7
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
+  flutter_launcher_icons:
 
-flutter:
-  uses-material-design: true
-
-  assets:
-    - assets/
-    - assets/fonts/
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
